<resources>
    <string name="app_name">TaxiCity - Driver</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="sign_up_title">Sign up</string>
    <string name="sign_up_title_2">to get more</string>
    <string name="email_label">Email :</string>
    <string name="hint_email">j.delaveine@example.com</string>
    <string name="password_label">Password :</string>
    <string name="hint_password">*******</string>
    <string name="confirm_password_lbl">Confirm Password :</string>
    <string name="firstname_lbl">First name :</string>
    <string name="firstname_hint">Jean</string>
    <string name="lastname_lbl">Last name :</string>
    <string name="lastname_hint">Dubois</string>
    <string name="phone_number_lbl">Phone Number :</string>
    <string name="phone_number_hint">0587250797</string>
    <string name="credit_card_number_lbl">Credit Card Number :</string>
    <string name="credit_card_number_hint">0000 0000 0000 0000</string>
    <string name="cvv_hint">CVV</string>
    <string name="expire_hint">Expire : 012018</string>
    <string name="sign_up_button">Sign up</string>
    <string name="new_to_taxicity">New to TaxiCity?</string>
    <string name="join_now">Join now</string>
    <string name="sign_in_btn">Sign in</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="welcome">Welcome</string>
    <string name="back">Back</string>
    <string name="waiting_trips">Waiting trips</string>
    <string name="my_history">My trip history</string>
    <string name="parameter">Settings</string>
    <string name="log_out">Log out</string>
    <string name="id_number">ID Number</string>
    <string name="tz_hint">342532173</string>
    <string name="in_progress_cell">In progress ...</string>
    <string name="price_trip_lbl">Price of the Trip</string>
    <string name="about_this_trip_header">About this trip</string>
    <string name="default_description">image</string>
    <string name="source_address_title_content_cell">Source address :</string>
    <string name="source_adresse_place_holder_content_cell">1 Mail de la grosse borne 95400 villiers le bel</string>
    <string name="busy_driver_not_quit_msg">You can\'t change page you are in current trip !</string>
    <string name="please_fill_all_required_error_msg">Please fill in all the required fields.</string>
    <string name="enter_valid_email_error_msg">Please enter a valid email address.</string>
    <string name="min_6_password_char_error_msg">Password must have at least 6 chars.</string>
    <string name="forgot_pasword_dialog_title">Forgot Password</string>
    <string name="forgot_pasword_dialog_msg">Enter email to reset password</string>
    <string name="reset_password_success_msg">Reset Password Email sent !</string>
    <string name="reset_password_btn_dialog">Reset Password !</string>
    <string name="cancel_btn_dialog">Cancel</string>
    <string name="enter_correct_cvv_error_msg">Please enter a correct CVV</string>
    <string name="enter_correct_phone_error_msg">Please enter a correct phone number</string>
    <string name="enter_corect_expiration_date_error_msg">Please enter a correct Expiration Date MMYYYY</string>
    <string name="enter_correct_cb_error_msg">Please enter a correct Credit card number</string>
    <string name="pasword_not_matching_error_msg">Password doesn\'t matching !</string>
    <string name="sign_up_success_msg">Succes Sign Up</string>
    <string name="destination_address_lbl">Destination address :</string>
    <string name="destination_adresse_hint">1 destination street to be a poto</string>
    <string name="distance_from_you_lbl">Distance from you</string>
    <string name="distance_from_yo_hint">1 km</string>
    <string name="trip_distance_lbl">Trip distance</string>
    <string name="start_date_lbl">DateTime</string>
    <string name="start_date_hint">21/08/2019 19:30</string>
    <string name="add_customer_contact_lbl">Add Customer Contact</string>
    <string name="add_customer_contact_hint">Netanel COHEN SOLAL</string>
    <string name="sms_btn_lbl">Sms</string>
    <string name="phone_btn_lbl">Phone</string>
    <string name="email_btn_lbl">Email</string>
    <string name="request_trip_btn_lbl">Request trip !</string>
    <string name="end_trip_btn_lbl">End trip</string>
    <string name="about_this_trip_content_cell_title">About this trip</string>
    <string name="filtering_by_date_lbl">Filtering By Date:</string>
    <string name="before_the_lbl_dialog">Before the:</string>
    <string name="filtering_by_price">Filtering By MIN Price :</string>
    <string name="filtering_by_city_lbl">Filtering By City :</string>
    <string name="city_name_dialog_lbl_filter">City Name:</string>
    <string name="filtering_by_distance_km">Filtering By Distance (km) :</string>
    <string name="header_driver_infos_hint">Netanel Cohen Solal - 1444669</string>
    <string name="total_trips_lbl">Total Trips :</string>
    <string name="total_trip_hint">130 trip(s)</string>
    <string name="total_priced_trips_lbl">Total Priced Trips :</string>
    <string name="total_priced_trips_hint">13000 $</string>
    <string name="change_password_lbl">Change Password</string>
    <string name="new_password_lbl">New Password</string>
    <string name="new_password_confirm_lbl">New Password Confirm</string>
    <string name="password_changed_success_msg">Password Changed !</string>
    <string name="confirm_action_dialog_title">Confirm Action</string>
    <string name="are_you_sure_msg_dialog_confirm">Are you sure you want to do this ?</string>
    <string name="yes_btn">Yes</string>
    <string name="no_btn">No</string>
    <string name="photo_changed_success_msg">Photo Changed !</string>
    <string name="error_getting_trip_list">error to get trip list</string>
    <string name="apply_filter_btn_dialog">Apply Filter</string>
    <string name="dismiss_btn_dialog_filter">Dismiss</string>
    <string name="filter_title_dialog">Filters</string>
    <string name="sms_sent_success_msg">SMS sent !</string>
    <string name="mail_title_confirmation_trip">TaxiCity : Your trip has started !</string>
    <string name="error_msg_email">There are no email clients installed.</string>
    <string name="title_trip_finished_dialog">Trip Finished !</string>
    <string name="yes_btn_finish_dialog">Fine !</string>
    <string name="success_contact_added_msg">Contact added to you phone !</string>
    <string name="price_of_trip_lbl">Price of the Trip</string>
    <string name="unbale_to_find_location">Can\'t find your current location</string>
    <string name="welcome_back_hint_nv_drawer">Welcome Back !</string>
</resources>
