<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container_cell"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/item_trip_background"
    android:descendantFocusability="blocksDescendants"

    android:visibility="gone">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="vertical"
                android:padding="0dp">

                <TextView
                    style="@style/labelTripItem"
                    android:layout_width="fill_parent"
                    android:layout_height="30dp"
                    android:background="@drawable/title_trip_id_item"
                    android:gravity="center_vertical"
                    android:text="@string/about_this_trip_header"
                    android:textAlignment="center"
                    android:textAllCaps="true" />

                <ImageView
                    android:id="@+id/header_img"
                    android:layout_width="fill_parent"
                    android:layout_height="80dp"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/default_description"
                    android:scaleType="centerCrop"
                    android:src="@drawable/bg_2" />


                <View
                    android:layout_width="fill_parent"
                    android:layout_height="0.5dp"
                    android:background="#000" />

                <TextView
                    style="@style/labelTripItem"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorTaxiYellow"
                    android:text="@string/source_address_title_content_cell"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/source_address"
                    style="@style/inputStyle"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:drawablePadding="5dp"
                    android:text="@string/source_adresse_place_holder_content_cell"
                    android:textSize="13sp" />


                <TextView
                    style="@style/labelTripItem"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorTaxiYellow"
                    android:text="@string/destination_address_lbl"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/trip_destination"
                    style="@style/inputStyle"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:drawablePadding="5dp"
                    android:text="@string/destination_adresse_hint"
                    android:textSize="13sp" />


                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="horizontal"
                    android:weightSum="6">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="40dp"
                            android:layout_margin="3dp"
                            android:contentDescription="@string/default_description"
                            android:src="@drawable/ic_taxihdpi" />

                        <TextView
                            android:id="@+id/distance_from_you_lbl"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/distance_from_you_lbl"
                            android:textSize="9sp" />

                        <TextView
                            android:id="@+id/distance_from_you"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/distance_from_yo_hint"
                            android:textSize="12sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <View
                        android:layout_width="0.6dp"
                        android:layout_height="fill_parent"

                        android:layout_gravity="center_horizontal"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="2dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="2dp"
                        android:background="@android:color/darker_gray" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="40dp"
                            android:layout_margin="3dp"
                            android:contentDescription="@string/default_description"
                            android:src="@drawable/ic_triphdpi" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/trip_distance_lbl"
                            android:textSize="9sp" />

                        <TextView
                            android:id="@+id/trip_distance"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/distance_from_yo_hint"
                            android:textSize="12sp"
                            android:textStyle="bold" />

                    </LinearLayout>


                    <View
                        android:layout_width="0.6dp"
                        android:layout_height="fill_parent"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="2dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="2dp"
                        android:background="@android:color/darker_gray" />


                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="40dp"
                            android:layout_margin="3dp"
                            android:src="@drawable/file1" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/start_date_lbl"
                            android:textSize="9sp" />

                        <TextView
                            android:id="@+id/datetime_trip"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/start_date_hint"
                            android:textSize="12sp"
                            android:textStyle="bold" />

                    </LinearLayout>


                </LinearLayout>


                <LinearLayout
                    android:id="@+id/customer_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:background="@drawable/img_item_trip"
                    android:padding="1dp">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center_vertical"

                        android:adjustViewBounds="true"
                        android:background="#FEF1E5"
                        android:scaleType="centerCrop"
                        android:src="@drawable/person_1_hdpi"
                        android:contentDescription="TODO" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            style="@style/labelTripItem"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/add_customer_contact_lbl"
                            android:textAlignment="center" />

                        <TextView
                            android:id="@+id/customer_name_text_view"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:drawableRight="@drawable/ic_chevron_right_black_24dp"
                            android:text="@string/add_customer_contact_hint"
                            android:textAlignment="center"
                            android:textColor="@color/colorTaxiBlack"
                            android:textSize="20sp" />

                    </LinearLayout>


                </LinearLayout>


            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:orientation="horizontal"
            android:weightSum="3">

            <Button
                android:id="@+id/sms_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@android:color/holo_blue_dark"
                android:drawableStart="@drawable/ic_sms"
                android:text="@string/sms_btn_lbl"
                tools:ignore="UnusedAttribute" />

            <Button
                android:id="@+id/call_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/colorTaxiYellow"
                android:drawableStart="@drawable/ic_phone"
                android:text="@string/phone_btn_lbl"
                tools:ignore="UnusedAttribute" />


            <Button
                android:id="@+id/mail_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@android:color/holo_red_light"
                android:drawableStart="@drawable/ic_mail"
                android:text="@string/email_btn_lbl"
                tools:ignore="UnusedAttribute" />


        </LinearLayout>

        <Button
            android:id="@+id/request_trip_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:backgroundTint="@color/colorPrimary"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:text="@string/request_trip_btn_lbl"
            android:textColor="#fff"
            android:textStyle="bold"
            tools:ignore="UnusedAttribute" />


        <View
            android:id="@+id/divider_requested"
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="@color/colorTaxiBlack"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="1dp"
            android:orientation="horizontal"
            android:weightSum="3">


            <Button
                android:id="@+id/cancel_trip_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/colorDanger"
                android:paddingTop="15dp"

                android:paddingBottom="15dp"
                android:text="@string/cancel_btn_dialog"
                android:textColor="#fff"
                android:visibility="gone"
                tools:ignore="UnusedAttribute" />

            <Button
                android:id="@+id/end_trip_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:backgroundTint="@color/colorSuccess"
                android:paddingTop="15dp"

                android:paddingBottom="15dp"
                android:text="@string/end_trip_btn_lbl"
                android:textColor="#fff"
                android:textStyle="bold"
                android:visibility="gone"
                tools:ignore="UnusedAttribute" />


        </LinearLayout>
    </LinearLayout>
</FrameLayout>