<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            style="@style/labelStyleForm"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/filtering_by_date_lbl" />

        <android.widget.Switch
            android:id="@+id/filter_by_date_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:switchMinWidth="100dp"
            android:textAlignment="center" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/filter_by_date_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="gone"
        android:weightSum="4">

        <TextView
            style="@style/labelStyleForm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/before_the_lbl_dialog" />

        <DatePicker
            android:id="@+id/filter_date_picker"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:calendarViewShown="false"
            android:datePickerMode="spinner"
            android:scaleX="0.7"
            android:scaleY="0.7"
            tools:ignore="UnusedAttribute" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            style="@style/labelStyleForm"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:text="@string/filtering_by_price" />

        <android.widget.Switch
            android:id="@+id/filter_by_price_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:switchMinWidth="100dp"
            android:textAlignment="center" />
    </LinearLayout>

    <com.ramotion.fluidslider.FluidSlider
        android:id="@+id/price_fluid_slider"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="0dp"
        android:padding="0dp"
        android:visibility="gone"
        app:bar_color="@color/colorTaxiBlack"
        app:end_text="200"
        app:initial_position="0.2"
        app:size="small"
        app:start_text="5" />

</LinearLayout>